--- a/jenax-server-parent/jenax-server-core/src/main/resources/graphql/mui/index.html
+++ b/jenax-server-parent/jenax-server-core/src/main/resources/graphql/mui/index.html
@@ -43,12 +43,13 @@ button {
   <div class="container">
     <h2>Minimal UI for GraphQL</h2>
 
-    <textarea id="input" onchange="saveState()" spellcheck="false"></textarea>
+    <textarea id="input" onkeyup="scheduleSaveState()" spellcheck="false" placeholder="Enter a GraphQL query here."></textarea>
 
     <div class="button-container">
       <button id="sendBtn" onclick="sendRequest()">Send</button>
       <button id="abortBtn" onclick="abortRequest()" disabled="true">Abort</button>
       <button onclick="showCurl()" title="Create a curl request for copy&amp;paste">Curl</button>
+      <button onclick="createLink()" title="Create a link request for copy&amp;paste">Link</button>
     </div>
 
     <textarea id="output" readonly="true" placeholder="Response area. Click 'Send' or 'Curl' to see the response. Can be JSON data or an error message."></textarea>
@@ -66,9 +67,41 @@ button {
   const endpoint = document.location.href
   const saveKey = "savedRequest";
 
-  const restoredValue = localStorage.getItem(saveKey);
-  if (restoredValue != null) {
-    input.value = restoredValue;
+  const queryParamName = "qtxt";
+
+  window.addEventListener('popstate', function (e) {
+    input.value = e.state.queryStr;
+  });
+
+  // Do not directly put a query from url into the local store
+  // Only do so on edits (i.e. don't override local store when clicking on a link)
+  var queryParams;
+  function tryInitFromQueryString() { // Returns true iff there is a 'query' arg
+    queryParams = new URLSearchParams(window.location.search);
+    const queryStr = queryParams.get(queryParamName);
+    const r = queryStr != null;
+    if (r) {
+      input.value = queryStr;
+    }
+    return r;
+  }
+
+  if (!tryInitFromQueryString()) {
+    const restoredValue = localStorage.getItem(saveKey);
+    if (restoredValue != null) {
+      input.value = restoredValue;
+    }
+  }
+
+  var previousQueryStr = input.value; // Don't push history states if there was no change'
+  history.replaceState({ "queryStr": previousQueryStr }, null, null);
+
+  var typingTimer;                //timer identifier
+  var doneTypingInterval = 1000;  //time in ms (5 seconds)
+
+  function scheduleSaveState() {
+    clearTimeout(typingTimer);
+    typingTimer = setTimeout(saveState, doneTypingInterval);
   }
 
   function saveState() {
@@ -84,6 +117,17 @@ button {
     const payloadStr = buildRequest();
     output.value = `curl -X POST '${toBashString(endpoint)}' -d '${toBashString(payloadStr)}'`;
     debug.value = "";
+  }
+
+  /** Create a link if it hasn't happened yet. Pushes a history state on change. */
+  function createLink() {
+    const oldQueryStr = queryParams.get(queryParamName);
+    const newQueryStr = input.value;
+    if (newQueryStr != oldQueryStr) {
+      queryParams.set(queryParamName, newQueryStr);
+      const state = { "queryStr": newQueryStr };
+      history.pushState(state, null, "?" + queryParams.toString());
+    }
   }
 
   function buildRequest() {
@@ -109,6 +153,14 @@ button {
   }
 
   function sendRequest() {
+    const queryStr = input.value;
+
+    if (queryStr != previousQueryStr) {
+      const state = { "queryStr": queryStr };
+      history.pushState(state, null, null);
+      previousQueryStr = queryStr;
+    }
+
     // Abort any pending request
     abortRequest();
     setAbortDisabled(false);
@@ -162,4 +214,3 @@ button {
 </script>
 </body>
 </html>
-
