GraphQL: Fixed bug in UI when creating curl link with single quotes. Fixed incorrect 'null' json element when SPARQL result is empty.

--- a/jenax-server-parent/jenax-server-core/src/main/resources/graphql/mui/index.html
+++ b/jenax-server-parent/jenax-server-core/src/main/resources/graphql/mui/index.html
@@ -110,7 +110,7 @@ button {
   }
 
   function toBashString(str) {
-    return str.replace("'", "'\\''")
+    return str.replaceAll("'", "'\\''")
   }
 
   function showCurl() {
