Improved html setup

--- a/jenax-server-parent/jenax-server-core/src/main/resources/static/yasgui/resource.html
+++ b/jenax-server-parent/jenax-server-core/src/main/resources/static/yasgui/resource.html
@@ -7,32 +7,34 @@
 
   <script id="data" type="application/ld+json">{}</script>
 
+  <base href="/view/">
+
   <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/paper/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
-  <link href="/_/css/style.css?g0" rel="stylesheet" />
-  <link href="/_/css/fonts.css?g0" rel="stylesheet" />
-  <link href="/_/css/site.css?g0" rel="stylesheet" />
+  <link href="_/css/style.css?g0" rel="stylesheet" />
+  <link href="_/css/fonts.css?g0" rel="stylesheet" />
+  <link href="_/css/site.css?g0" rel="stylesheet" />
 
   <script src="https://cdn.jsdelivr.net/g/es6-promise@1.0.0"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jsonld/0.4.12/jsonld.js"></script>
   <script src="https://unpkg.com/wellknown@0.5.0/wellknown.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
-  <script src="/_/js2/constants.js?g0"></script>
-  <script src="/_/js2/config.js?g0"></script>
-  <script src="/_/js2/queries.js?g0"></script>
-  <script src="/_/js2/labels.js?g0"></script>
-  <script src="/_/js2/bnodes.js?g0"></script>
-  <script src="/_/js2/render-ld.js?g0"></script>
-  <script src="/_/js2/map2.js?g0"></script>
-  <script src="/_/js2/iframe-auth.js?g0"></script>
-  <script src="/_/js2/load.js?g0"></script>
+  <script src="_/js2/constants.js?g0"></script>
+  <script src="_/js2/config.js?g0"></script>
+  <script src="_/js2/queries.js?g0"></script>
+  <script src="_/js2/labels.js?g0"></script>
+  <script src="_/js2/bnodes.js?g0"></script>
+  <script src="_/js2/render-ld.js?g0"></script>
+  <script src="_/js2/map2.js?g0"></script>
+  <script src="_/js2/iframe-auth.js?g0"></script>
+  <script src="_/js2/load.js?g0"></script>
 
 </head>
 <body>
 
 <nav class="navbar navbar-default">
   <div class="container">
-    <div class="navbar-header"><a class="navbar-brand"><img class="ldv-logo-top" src='/_/img/logo.svg'> Linked Data Viewer</a>
+    <div class="navbar-header"><a class="navbar-brand"><img class="ldv-logo-top" src='_/img/logo.svg'> Linked Data Viewer</a>
     </div>
   </div>
 </nav>
@@ -65,7 +67,7 @@
         <li><button class="link" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Back to top</button></li>
       </ul>
       <p>
-        <a href="//aksw.org"><img class="ldv-logo-bottom" src='/_/img/logo.svg'></a>
+        <a href="//aksw.org"><img class="ldv-logo-bottom" src='_/img/logo.svg'></a>
       </p>
 
       <p class="ldv-footer-margin">
