--- a/jenax-server-parent/jenax-server-core/src/main/resources/static/yasgui/index.html
+++ b/jenax-server-parent/jenax-server-core/src/main/resources/static/yasgui/index.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="yasgui/">
   <link href="yasgui.min.css" rel="stylesheet" type="text/css" />
   <script src="yasgui.min.js"></script>
   <style>
@@ -26,16 +27,16 @@
 
         if(currentPage != null) {
           var prefixes = currentPage.yasqe.getPrefixesFromQuery();
-          alert(JSON.stringify(prefixes)); 
-	  return prefixes;
-	}
-	}
+          alert(JSON.stringify(prefixes));
+    return prefixes;
+  }
+  }
    yasgui = new Yasgui(document.getElementById("yasgui"), {
-  	// requestConfig: { endpoint: "http://localhost:9999/sparql" },
-	requestConfig: { endpoint: document.location.href },
-  	copyEndpointOnNewTab: false,
-  	
+    // requestConfig: { endpoint: "http://localhost:9999/sparql" },
+  requestConfig: { endpoint: document.location.href },
+    copyEndpointOnNewTab: false,
+
         yasre: { prefixes: {"dbo":"http://dbpedia.org/ontology/", "dbr":"http://dbpedia.org/resource/"}}
-	});
+  });
   </script>
 </body>
