--- a/jenax-server-parent/jenax-server-core/src/main/resources/static/index.html
+++ b/jenax-server-parent/jenax-server-core/src/main/resources/static/index.html
@@ -1,7 +1,24 @@
 <html>
-  <head>RDF Processing Toolkit (RPT)</head>
+  <head>
+    <title>RDF Processing Toolkit (RPT)</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
-    <a href="sparql">SPARQL endpoint</a>
-    <a href="graphql">GraphQL endpoint</a>
+    <header>
+      <h1><img src="view/_/img/logo.svg">RDF Processing Toolkit - Server</h1>
+    </header>
+    <content>
+      <ul>
+
+	<li><div><a href="sparql"><img src="logo/sparql.png">SPARQL endpoint / Yasgui</a></div></li>
+
+	<li><div><a href="snorql"><div class="oc"><div class="ic">Snorql SPARQL explorer</div></div></a></div></li>
+
+	<li><div><a href="graphql"><img src="logo/graphql.png">GraphQL endpoint</a></div></li>
+      </ul>
+    </content>
+    <footer>
+      Powered by <a href="https://github.com/Scaseco/jenax"><img src="logo/jenax.png" alt="JenaX"></a>
+    </footer>
   </body>
 </html>
