Improved landing page layout

--- a/jenax-server-parent/jenax-server-core/src/main/resources/static/index.html
+++ b/jenax-server-parent/jenax-server-core/src/main/resources/static/index.html
@@ -8,11 +8,11 @@
       <h1><img src="view/_/img/logo.svg">RDF Processing Toolkit - Server</h1>
     </header>
     <content>
-      <ul>
+      <ul class="horizontal-list centered">
 
 	<li><div><a href="sparql"><img src="logo/sparql.png">SPARQL endpoint / Yasgui</a></div></li>
 
-	<li><div><a href="snorql"><div class="oc"><div class="ic">Snorql SPARQL explorer</div></div></a></div></li>
+	<li><div><a href="snorql"><img src="logo/snorql.png">Snorql SPARQL explorer</a></div></li>
 
 	<li><div><a href="graphql"><img src="logo/graphql.png">GraphQL endpoint</a></div></li>
       </ul>
