GraphQl: Re-added @debug support, clean up of the SPARQL queries generated from GraphQL

--- a/jenax-server-parent/jenax-server-core/frontend/src/graphql/mui/index.html
+++ b/jenax-server-parent/jenax-server-core/frontend/src/graphql/mui/index.html
@@ -29,6 +29,7 @@ h2 {
     resize: vertical; /* Allow vertical resizing only */
 }
 
+/* CSS Source: https://pagehelper.lets-script.com/blog/codemirror6-resize/ */
 .a-demo-cm6  {
   resize: vertical;
   overflow: auto;
@@ -39,7 +40,7 @@ h2 {
   height: 100%;
   max-height: 400px;
 }
-.a-demo-cm6 .cm-gutter, .a-demo-cm6 .cm-contnet {
+.a-demo-cm6 .cm-gutter, .a-demo-cm6 .cm-content { /* .cm-contnet */
   min-height: 350px;
 }
 
@@ -67,9 +68,11 @@ button {
       <button id="abortBtn" onclick="abortRequest()" disabled="true">Abort</button>
       <button onclick="showCurl()" title="Create a curl request for copy&amp;paste">Curl</button>
       <button onclick="createLink()" title="Create a link request for copy&amp;paste">Link</button>
+      <button id="sparqlBtn" disabled onclick="showSparql()" title="Show SPARQL in Yasgui (requires executed GraphQL query with @debug on query operation or top level field)">Sparql</button>
     </div>
 
-    <textarea class="textarea" id="output" readonly="true" placeholder="Response area. Click 'Send' or 'Curl' to see the response. Can be JSON data or an error message."></textarea>
+    <!-- <textarea class="textarea" id="output" readonly="true" placeholder="Response area. Click 'Send' or 'Curl' to see the response. Can be JSON data or an error message."></textarea> -->
+    <div class="a-demo-cm6 cm-editor-wrap" id="output"></div>
     <textarea class="textarea" id="debug" readonly="true" placeholder="Debug information area. Annotate a top-level field with @debug to show the generated SPARQL query."></textarea>
   </div>
 </body>
