GraphQl Fuseki mod now working properly.

--- a/jenax-server-parent/jenax-server-core/frontend/src/graphql/mui/index.html
+++ b/jenax-server-parent/jenax-server-core/frontend/src/graphql/mui/index.html
@@ -38,7 +38,7 @@ h2 {
 
 .a-demo-cm6 .cm-editor {
   height: 100%;
-  max-height: 400px;
+  /* max-height: 400px; */
 }
 .a-demo-cm6 .cm-gutter, .a-demo-cm6 .cm-content { /* .cm-contnet */
   min-height: 350px;
