add ontodia graph-explorer resource

--- a/jenax-server-parent/jenax-server-core/frontend/src/index.html
+++ b/jenax-server-parent/jenax-server-core/frontend/src/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RDF Processing Toolkit (RPT)</title>
     <link rel="stylesheet" href="style.css">
   </head>
