add startpage implementation to trifid

--- a/jenax-server-parent/jenax-server-core/frontend/src/index.html
+++ b/jenax-server-parent/jenax-server-core/frontend/src/index.html
@@ -13,9 +13,13 @@
 
 	<li><div><a href="sparql"><img src="logo/sparql.png">SPARQL endpoint / Yasgui</a></div></li>
 
-	<li><div><a href="snorql"><img src="logo/snorql.png">Snorql SPARQL explorer</a></div></li>
-
 	<li><div><a href="graphql"><img src="logo/graphql.png">GraphQL endpoint</a></div></li>
+
+	<li><div><a href="view/?*"><img src="logo/ldv.png">Viewer</a></div></li>
+
+	<li><div><a href="graph-explorer"><img src="logo/ontodia.png">Graph Explorer</a></div></li>
+
+	<li><div><a href="snorql"><img src="logo/snorql.png">Snorql SPARQL explorer</a></div></li>
       </ul>
     </content>
     <footer>
